fix wrap problem

--- a/WebContent/services/services.css
+++ b/WebContent/services/services.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 body {
+    word-wrap: break-word;
 }
 .content {
 	padding: 75px 2% 5% 2%;
@@ -36,9 +37,11 @@ h1 {
 }
 .text h3 {
 	margin-bottom: 18px;
+        width: 100%;
 }
 .text p {
 	margin-bottom: 18px;
+        width: 100%;
 }
 
 @media screen and (max-width: 768px) {
